UpdateMyUsername ready, tested
